--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,6 @@ services:
       - 3307:3306
     volumes:
       - ./db/mysql_data:/var/lib/mysql
-
   app:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -31,3 +30,11 @@ services:
       - db
     links:
       - db
+  nginx:
+    build: nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - app
+    links:
+      - app
